Add robots and basics SEO

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/sitemap.xml",
+      "dest": "https://api.monobuket.by/api/sitemap.xml"
+    }
   ]
 }
